# render-engine

./: Asset_GUID_Assignment.cpp  Asset_Reference_Serialization.cpp  CMakeLists.txt  Doxyfile.in  README.md  arh.puml  main.cpp
lib/rb/: CMakeLists.txt  reminder
lib/rb/include/my_sfml/: ISFML_Event_Source.h  SFMLFont.h  SFML_Event_Collector.h  SFML_Font_AssetLoader.h  SFML_Renderer.h
lib/rb/include/rb/: AssetReader.h  Context.h  Graphics_Factory.h  Renderer.h  View.h  ViewContext.h  reference_serialization.h
lib/rb/include/rb/asset/: AssetDesc.h  AssetRecord.h  AssetState.h  AssetType.h  Font.h  IAssetLoader.h
lib/rb/include/rb/asset/data/: AssetDataLoader.h  AssetDataNode.h  AssetMetaData.h  FontNode.h
lib/rb/include/rb/assets/: Font.h
lib/rb/include/rb/assets/data/: AssetDataNode.h  AssetMetaData.h  FontNode.h
lib/rb/include/rb/ast/: RB_Config.h  RB_Type.h
lib/rb/include/rb/internal/: Alignment.h  AssetState.h  AssetType.h  Color.h  GUID.h  RecordID.h  Rect.h  Size.h  from_JSON.h
lib/rb/include/rb/layout_engine/: Node.h  Parser.h  Token.h  Tokenizer.h  UIFactory.h  make_element.inl
lib/rb/include/rb/layout_engine/elements/: LayoutResult.h  LinearLayout.h  Rectangle.h  Sprite.h  Text.h  UIElement.h  V_HBox.h
lib/rb/include/rb/registry/: AssetHandle.h  AssetHandle.inl  AssetImporter.h  AssetLoader.h  AssetRecord.h  AssetRegistry.h  AssetRegistry.inl  IAssetLoader.h
lib/rb/include/rb/registry/assets_data/: AssetDataNode.h  AssetDataVisitor.h  AssetMetaData.h  FontNode.h
lib/rb/include/rb/render/: Rectangle.h  RenderFrame.h  RenderNode.h  Sprite.h  Text.h
lib/rb/include/sfml/: Renderer.h  SFML_Font_AssetLoader.h
lib/rb/src/my_sfml/: SFML_Event_Collector.cpp  SFML_Font_AssetLoader.cpp  SFML_Renderer.cpp
lib/rb/src/view/: Graphics_Factory.cpp  Renderer.cpp  View.cpp
lib/rb/src/view/assets/: AssetImporter.cpp  AssetRegistry.cpp
lib/rb/src/view/assets/data/: AssetDataLoader.cpp
lib/rb/src/view/layout_engine/: Parser.cpp  Tokenizer.cpp  UIFactory.cpp
lib/rb/src/view/layout_engine/elements/: LinearLayout.cpp  Rectangle.cpp  Sprite.cpp  Text.cpp  UIElement.cpp
lib/rb/src/view/registry/: AssetImporter.cpp  AssetRegistry.cpp
lib/view/: CMakeLists.txt  reminder  view.puml
lib/view/include/sfml/: SFMLFont.h
lib/view/include/view/: Graphics_Factory.h  View.h  ViewContext.h
lib/view/include/view/internal/: Alignment.h  AssetState.h  AssetType.h  Color.h  GUID.h  RecordID.h  Rect.h  Size.h
lib/view/include/view/layout_engine/: Label.h  LayoutResult.h  LinearLayout.h  LivesLabel.h  Node.h  Parser.h  Rectangle.h  SpriteElement.h  Text.h  Token.h  Tokenizer.h  UIElement.h  UIFactory.h  V_HBox.h  make_element.inl
lib/view/include/view/layout_engine/elemenst/: LayoutResult.h  LinearLayout.h  Rectangle.h  SpriteElement.h  UIElement.h  V_HBox.h
lib/view/include/view/layout_engine/elements/: LayoutResult.h  LinearLayout.h  Rectangle.h  SpriteElement.h  Text.h  UIElement.h  V_HBox.h
lib/view/include/view/registry/: AssetHandle.h  AssetHandle.inl  AssetImporter.h  AssetLoader.h  AssetRecord.h  AssetRegistry.h  AssetRegistry.inl  IAssetLoader.h
lib/view/include/view/registry/assets/: Font.h  Sprite.h
lib/view/include/view/registry/assets_data/: AssetDataNode.h  AssetDataVisitor.h  AssetMetaData.h  FontNode.h
lib/view/include/view/render/: RI_ComplexSprite.h  RI_Label.h  RI_Rectangle.h  RI_Sprite.h  Rectangle.h  RenderFrame.h  RenderNode.h  Sprite.h  Text.h
lib/view/src/: Camera.cpp  Graphics_Factory.cpp  SFML_Manager.cpp  Sprite_Group.cpp  View.cpp
lib/view/src/layout_engine/: LinearLayout.cpp  Rectangle.cpp  SpriteElement.cpp  Text.cpp  UIElement.cpp
lib/view/src/layout_engine/elements/: Rectangle.cpp  Text.cpp
lib/view/src/presentation/layout_engine/: Map.cpp
lib/view/src/sfml/: SFML_Animation.cpp  SFML_Complex_Sprite.cpp  SFML_View.cpp  SFML_View_Events.cpp  SFML_View_Visitor.cpp
lib/view/src/view/: Graphics_Factory.cpp  View.cpp
lib/view/src/view/assets/: AssetImporter.cpp  AssetRegistry.cpp
lib/view/src/view/layout_engine/: Parser.cpp  Tokenizer.cpp  UIFactory.cpp
lib/view/src/view/layout_engine/elements/: LinearLayout.cpp  Rectangle.cpp  SpriteElement.cpp  (+2 more)
(+180 files in other folders)
